@@ -3155,10 +3155,6 @@ operating system.
    Return the set of CPUs the process with PID *pid* (or the current process
    if zero) is restricted to.
 
-   .. seealso::
-      :func:`multiprocessing.cpu_count` returns the number of CPUs in the
-      system.
-
 
 .. _os-path:
 
@@ -3194,6 +3190,13 @@ Miscellaneous System Information
    determine the set of names known to the system.
 
    Availability: Unix.
+
+
+.. function:: cpu_count()
+
+   Return the number of CPUs in the system. Returns None if undetermined.
+
+   .. versionadded:: 3.4
 
 
 .. function:: getloadavg()
